# hello-rpi-pico

./: CMakeLists.txt  build-debug.sh  build-release.sh  hello-rpi-pico.c
